--- a/index.html
+++ b/index.html
@@ -1,11 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Início | selfcare</title>
+    <link rel="shortcut icon" href="./assets/favicon.svg" type="image/svg" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <img src="assets/logo.svg" alt="Logo selfcare" />
+      <nav class="menu">
+        <li>
+          <a href="/"><img src="./assets/search.svg" alt="Buscar" /></a>
+        </li>
+        <li>
+          <a href="/"><img src="./assets/profile.svg" alt="Perfil" /></a>
+        </li>
+        <li>
+          <a href="/"><img src="./assets/cart.svg" alt="Carrinho" /></a>
+        </li>
+      </nav>
+    </header>
+    <main>
+      <section class="banner"></section>
+      <section class="productSection">
+        <header class="productHeader">
+          <div class="productHeaderTexts">
+            <strong>PROMOÇÃO</strong>
+            <span>9 produtos</span>
+          </div>
+        </header>
+
+        <div class="productContainer">
+          <section class="productItem">
+            <div class="productImg item-1"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+          <section class="productItem">
+            <div class="productImg item-2"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+          <section class="productItem">
+            <div class="productImg item-3"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+          <section class="productItem">
+            <div class="productImg item-4"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+          <section class="productItem">
+            <div class="productImg item-5"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+          <section class="productItem">
+            <div class="productImg item-6"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+          <section class="productItem">
+            <div class="productImg item-7"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+          <section class="productItem">
+            <div class="productImg item-8"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+          <section class="productItem">
+            <div class="productImg item-9"></div>
+            <h3>Lorem Ipsum</h3>
+            <strong>R$<span>50,00</span></strong>
+          </section>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <section class="topFooter">
+        <div class="leftSide">
+          <ul>
+            <li><a href="/">Contato</a></li>
+            <li><a href="/">Termos de serviço</a></li>
+            <li><a href="/">Política de privacidade</a></li>
+            <li><a href="/">Cancelamento, troca e reembolso</a></li>
+          </ul>
+        </div>
+        <div class="rightSide">
+          <span>Newsletter</span>
+          <div>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Digite seu melhor e-mail"
+            />
+            <button type="submit">Inscrever</button>
+          </div>
+        </div>
+      </section>
+      <hr />
+      <section class="bottomFooter">
+        <div class="social">
+          <a href=""><img src="./assets/instagram.svg" alt="Instagram" /></a>
+          <a href=""><img src="./assets/facebook.svg" alt="Facebook" /></a>
+        </div>
+        <div class="payment">
+          <img src="./assets/mastercard.svg" alt="MasterCard" />
+          <img src="./assets/paypal.svg" alt="PayPal" />
+          <img src="./assets/visa.svg" alt="Visa" />
+        </div>
+      </section>
+    </footer>
+  </body>
 </html>
